responsieve for laptops

--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 }
 
 .time-container {
-    width: 176px;
-    height: 236px;
+    width: 10vw;
+    height: 13vw;
     background: #6C63FF;
     border-radius: 10px;
     color: #FFF;
